Add basic about me and links

--- a/index.html
+++ b/index.html
@@ -1,7 +1,55 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <!-- Stylesheets -->
+    <link href="./assets/css/style.css" rel="stylesheet" type="text/css" media="all">
+</head>
+
 <body>
-<h1>Duncan Crawbuck</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="header">
+        <h1>
+            Duncan Crawbuck
+        </h1>
+    </div>
+    
+    <div class="information">
+            <img class="avatar" src="./assets/images/avatar.jpeg" alt="Avatar">
+        <h2>
+            About Me
+        </h2>
+        <p>
+            I am a student at California State University, Sacramento, pursuing a Bachelor's degree in Computer Science.
+            I am expecting to graduate in May 2020 and am looking to start a career as a Software Engineer in the San Francisco Bay Area. 
+            
+        </p>
+        <div class="buttonDrawer">
+
+            <a href="./assets/files/Resume.pdf" download="DuncanCrawbuck_Resume">
+                <div class="pillButton">
+                    Resume
+                </div>
+            </a>
+
+            <a href="www.linkedin.com/in/dcrawbuck">
+                <div class="pillButton">
+                    LinkedIn
+                </div>
+            </a>
+
+            <a href="https://github.com/dcrawbuck">
+                <div class="pillButton">
+                    GitHub
+                </div>
+            </a>
+
+            <a href="https://www.hackerrank.com/dcrawbuck">
+                <div class="pillButton">
+                    HackerRank
+                </div>
+            </a>
+        </div>
+    </div>
 </body>
+
 </html>
