Add link out to support and navbar

--- a/simple-and-classic-games/support/index.html
+++ b/simple-and-classic-games/support/index.html
@@ -1,8 +1,46 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <title>Simple & Classic Games Support</title>
+    <!-- Stylesheets -->
+    <link href="../../assets/css/style.css" rel="stylesheet" type="text/css" media="all">
+</head>
+
 <body>
-<h1>Simple & Classic Games</h1>
-<header>Support</header>
-<p>If you have questions, concerns, bug reports, or feature requests, please email <a href="mailto:simpleandclassicgame@icloud.com">simpleandclassicgame@icloud.com</a>.</p>
+    <div class="header">
+        <h1>
+            Duncan Crawbuck
+        </h1>
+
+        <div class="navBar">
+            <div class="pillButton">
+                <a href="../../index.html">
+                    ABOUT
+                </a>
+                <a href="../../projects/index.html">
+                    PROJECTS
+                </a>
+                <a href="../../apps/index.html">
+                    APPS
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="information">
+        <!-- <h2>
+            Simple & Classic Games Support
+        </h2> -->
+        <div class="centerText">
+            <div class="pillButton">
+                <a class="active" href="../../apps/simple-and-classic-games/support/index.html">
+                    Support Page
+                </a>
+            </div>
+        </div>
+        </p>
+        </p>
+    </div>
 </body>
+
 </html>
