Add navbar and title, organize code

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>Duncan Crawbuck: About</title>
     <!-- Stylesheets -->
     <link href="./assets/css/style.css" rel="stylesheet" type="text/css" media="all">
 </head>
@@ -11,43 +12,59 @@
         <h1>
             Duncan Crawbuck
         </h1>
+
+        <div class="navBar">
+            <div class="pillButton">
+                <a class="active" href="">
+                    ABOUT
+                </a>
+                <a href="./projects/index.html">
+                    PROJECTS
+                </a>
+                <a href="./apps/index.html">
+                    APPS
+                </a>
+            </div>
+        </div>
     </div>
-    
+
+
     <div class="information">
-            <img class="avatar" src="./assets/images/avatar.jpeg" alt="Avatar">
+        <img class="avatar" src="./assets/images/avatar.jpeg" alt="Avatar">
+
         <h2>
             About Me
         </h2>
-        <p>
+
+        <div class="detailText">
             I am a student at California State University, Sacramento, pursuing a Bachelor's degree in Computer Science.
-            I am expecting to graduate in May 2020 and am looking to start a career as a Software Engineer in the San Francisco Bay Area. 
-            
-        </p>
+            I am expecting to graduate in May 2020 and am looking to start a career as a Software Engineer in the San
+            Francisco Bay Area.
+        </div>
+
         <div class="buttonDrawer">
 
-            <a href="./assets/files/Resume.pdf" download="DuncanCrawbuck_Resume">
-                <div class="pillButton">
+            <div class="pillButton">
+                <a class="active" href="./assets/files/Resume.pdf" download="DuncanCrawbuck_Resume">
                     Resume
-                </div>
-            </a>
+                </a>
 
-            <a href="www.linkedin.com/in/dcrawbuck">
-                <div class="pillButton">
+                <a class="active" href="www.linkedin.com/in/dcrawbuck">
                     LinkedIn
-                </div>
-            </a>
+                </a>
 
-            <a href="https://github.com/dcrawbuck">
-                <div class="pillButton">
+                <a class="active" href="https://github.com/dcrawbuck">
                     GitHub
-                </div>
-            </a>
+                </a>
 
-            <a href="https://www.hackerrank.com/dcrawbuck">
-                <div class="pillButton">
+                <a class="active" href="https://www.hackerrank.com/dcrawbuck">
                     HackerRank
-                </div>
-            </a>
+                </a>
+
+                <a class="active" href="https://leetcode.com/dcrawbuck/">
+                    LeetCode
+                </a>
+            </div>
         </div>
     </div>
 </body>
