Switch App Store badges from eps to svg

--- a/apps/index.html
+++ b/apps/index.html
@@ -43,10 +43,10 @@
 
         <div class="buttonDrawer">
                 <a href="https://itunes.apple.com/us/app-bundle/id1478291357">
-                    <img class="badge" src="../assets/images/Download on/Download_on_the_App_Store_Badge_US-UK_blk_092917.eps">
+                    <img class="badge" src="../assets/images/Download on/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg">
                 </a>
                 <a href="https://itunes.apple.com/us/app-bundle/id1495557127">
-                    <img class="badge" src="../assets/images/Download on/Download_on_the_Mac_App_Store_Badge_US-UK_blk_092917.eps">
+                    <img class="badge" src="../assets/images/Download on/Download_on_the_Mac_App_Store_Badge_US-UK_RGB_blk_092917.svg">
                 </a>
 
                 <div class="pillButton">
