Add website to Projects tab

--- a/projects/index.html
+++ b/projects/index.html
@@ -29,8 +29,22 @@
     </div>
 
     <div class="information">
-        <div class="teaser">
-            Coming Soon...
+        <h2>
+            dcrawbuck.github.io
+        </h2>
+
+        <div class="detailText">
+            A straightforward website designed to showcase my projects and developer talent.
+            Built with simple HTML and CSS and powered by GitHub pages.
+            The website supports dark mode, and uses the native system font.
+        </div>
+
+        <div class="buttonDrawer">
+                <div class="pillButton">
+                    <a class="active" href="https://github.com/dcrawbuck/dcrawbuck.github.io">
+                        GitHub Repo
+                    </a>
+                </div>
         </div>
     </div>
 </body>
