Update with proper row and column layout support

--- a/apps/index.html
+++ b/apps/index.html
@@ -12,7 +12,7 @@
         <h1>
             Duncan Crawbuck
         </h1>
-        
+
         <div class="navBar">
             <div class="pillButton">
                 <a href="../index.html">
@@ -28,36 +28,43 @@
         </div>
     </div>
 
-    <div class="information">
-        <img class="icon" src="../assets/images/App Icons/Solitaire-Icon.png" alt="Avatar">
+    <div class="row">
+        <div class="mainColumn">
+            <div class="information">
+                <img class="icon" src="../assets/images/App Icons/Solitaire-Icon.png" alt="Avatar">
 
-        <h2>
-            Simple & Classic Games
-        </h2>
+                <h2>
+                    Simple & Classic Games
+                </h2>
 
-        <div class="detailText">
-            A collection of classic games like Solitaire and Minesweeper, made spefically for iOS and macOS. 
-            Simple design with powerful features like Pro Mode for more customization and control. 
-            Developed for iOS using Swift, UIKit, and SwiftUI, and for macOS using Mac Catalyst.
-        </div>
-
-        <div class="buttonDrawer">
-                <a href="https://itunes.apple.com/us/app-bundle/id1478291357">
-                    <img class="badge" src="../assets/images/Download on/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg">
-                </a>
-                <a href="https://itunes.apple.com/us/app-bundle/id1495557127">
-                    <img class="badge" src="../assets/images/Download on/Download_on_the_Mac_App_Store_Badge_US-UK_RGB_blk_092917.svg">
-                </a>
-
-                <div class="pillButton">
-                    <a class="active" href="./simple-and-classic-games/support/index.html">
-                        Support
-                    </a>
-
-                    <a class="active" href="https://app.termly.io/document/privacy-policy/e8290a67-2cd3-4469-a1f7-aaf5eee0adbb">
-                        Privacy Policy
-                    </a>
+                <div class="detailText">
+                    A collection of classic games like Solitaire and Minesweeper, made spefically for iOS and macOS.
+                    Simple design with powerful features like Pro Mode for more customization and control.
+                    Developed for iOS using Swift, UIKit, and SwiftUI, and for macOS using Mac Catalyst.
                 </div>
+
+                <div class="buttonDrawer">
+                    <a href="https://itunes.apple.com/us/app-bundle/id1478291357">
+                        <img class="badge"
+                            src="../assets/images/Download on/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg">
+                    </a>
+                    <a href="https://itunes.apple.com/us/app-bundle/id1495557127">
+                        <img class="badge"
+                            src="../assets/images/Download on/Download_on_the_Mac_App_Store_Badge_US-UK_RGB_blk_092917.svg">
+                    </a>
+
+                    <div class="pillButton">
+                        <a class="active" href="./simple-and-classic-games/support/index.html">
+                            Support
+                        </a>
+
+                        <a class="active"
+                            href="https://app.termly.io/document/privacy-policy/e8290a67-2cd3-4469-a1f7-aaf5eee0adbb">
+                            Privacy Policy
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
