--- a/index.html
+++ b/index.html
@@ -29,44 +29,76 @@
     </div>
 
 
-    <div class="information">
-        <img class="avatar" src="./assets/images/avatar.jpeg" alt="Avatar">
 
-        <h2>
-            About Me
-        </h2>
+    <div class="row">
+        <div class="mainColumn">
+        <div class="information">
+            <img class="avatar" src="./assets/images/avatar.jpeg" alt="Avatar">
 
-        <div class="detailText">
-            I am a student at California State University, Sacramento, pursuing a Bachelor's degree in Computer Science.
-            I am expecting to graduate in May 2020 and am looking to start a career as a Software Engineer in the San
-            Francisco Bay Area.
-        </div>
+            <h2>
+                About Me
+            </h2>
 
-        <div class="buttonDrawer">
+            <div class="detailText">
+                I am a student at California State University, Sacramento, pursuing a Bachelor's degree in Computer
+                Science.
+                I am expecting to graduate in May 2020 and am looking to start a career as a Software Engineer in the
+                San
+                Francisco Bay Area.
+            </div>
 
-            <div class="pillButton">
-                <a class="active" href="./assets/files/Resume.pdf" download="DuncanCrawbuck_Resume">
-                    Resume
-                </a>
+            <div class="buttonDrawer">
 
-                <a class="active" href="www.linkedin.com/in/dcrawbuck">
-                    LinkedIn
-                </a>
+                <div class="pillButton">
+                    <a class="active" href="./assets/files/Resume.pdf" download="DuncanCrawbuck_Resume">
+                        Resume
+                    </a>
 
-                <a class="active" href="https://github.com/dcrawbuck">
-                    GitHub
-                </a>
+                    <a class="active" href="www.linkedin.com/in/dcrawbuck">
+                        LinkedIn
+                    </a>
 
-                <a class="active" href="https://www.hackerrank.com/dcrawbuck">
-                    HackerRank
-                </a>
+                    <a class="active" href="https://github.com/dcrawbuck">
+                        GitHub
+                    </a>
 
-                <a class="active" href="https://leetcode.com/dcrawbuck/">
-                    LeetCode
-                </a>
+                    <a class="active" href="https://www.hackerrank.com/dcrawbuck">
+                        HackerRank
+                    </a>
+
+                    <a class="active" href="https://leetcode.com/dcrawbuck/">
+                        LeetCode
+                    </a>
+                </div>
             </div>
         </div>
+        </div>
     </div>
+
+    <!-- <div class="row">
+        <div class="column">
+            <div class="information">
+                <h2>
+                    Skills
+                </h2>
+
+                <div class="detailText">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+            </div>
+        </div>
+        <div class="column">
+            <div class="information">
+                <h2>
+                    Interests
+                </h2>
+
+                <div class="detailText">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+            </div>
+        </div>
+    </div> -->
 </body>
 
 </html>
