--- a/projects/index.html
+++ b/projects/index.html
@@ -12,7 +12,7 @@
         <h1>
             Duncan Crawbuck
         </h1>
-        
+
         <div class="navBar">
             <div class="pillButton">
                 <a href="../index.html">
@@ -28,23 +28,27 @@
         </div>
     </div>
 
-    <div class="information">
-        <h2>
-            dcrawbuck.github.io
-        </h2>
+    <div class="row">
+        <div class="mainColumn">
+            <div class="information">
+                <h2>
+                    dcrawbuck.github.io
+                </h2>
 
-        <div class="detailText">
-            A straightforward website designed to showcase my projects and developer talent.
-            Built with simple HTML and CSS and powered by GitHub pages.
-            The website supports dark mode, and uses the native system font.
-        </div>
-
-        <div class="buttonDrawer">
-                <div class="pillButton">
-                    <a class="active" href="https://github.com/dcrawbuck/dcrawbuck.github.io">
-                        GitHub Repo
-                    </a>
+                <div class="detailText">
+                    A straightforward website designed to showcase my projects and developer talent.
+                    Built with simple HTML and CSS and powered by GitHub pages.
+                    The website supports dark mode, and uses the native system font.
                 </div>
+
+                <div class="buttonDrawer">
+                    <div class="pillButton">
+                        <a class="active" href="https://github.com/dcrawbuck/dcrawbuck.github.io">
+                            GitHub Repo
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
