--- a/simple-and-classic-games/support/index.html
+++ b/simple-and-classic-games/support/index.html
@@ -27,19 +27,22 @@
             </div>
         </div>
     </div>
-    <div class="information">
-        <!-- <h2>
-            Simple & Classic Games Support
-        </h2> -->
-        <div class="centerText">
-            <div class="pillButton">
-                <a class="active" href="../../apps/simple-and-classic-games/support/index.html">
-                    Support Page
-                </a>
+
+    <div class="row">
+        <div class="mainColumn">
+            <div class="information">
+                <!-- <h2>
+                    Simple & Classic Games Support
+                </h2> -->
+                <div class="centerText">
+                    <div class="pillButton">
+                        <a class="active" href="../../apps/simple-and-classic-games/support/index.html">
+                            Support Page
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
-        </p>
-        </p>
     </div>
 </body>
 
