--- a/apps/simple-and-classic-games/support/index.html
+++ b/apps/simple-and-classic-games/support/index.html
@@ -27,20 +27,24 @@
             </div>
         </div>
     </div>
-    <div class="information">
-        <h2>
-            Simple & Classic Games Support
-        </h2>
-        <div class="detailText">
-            For any questions, concerns, bug reports, or feature requests:
-            <div class="pillButton">
-                <a class="active" href="mailto:simpleandclassicgame@icloud.com">
-                    Support Email
-                </a>
+
+    <div class="row">
+        <div class="mainColumn">
+            <div class="information">
+                <h2>
+                    Simple & Classic Games Support
+                </h2>
+                
+                <div class="detailText">
+                    For any questions, concerns, bug reports, or feature requests:
+                    <div class="pillButton">
+                        <a class="active" href="mailto:simpleandclassicgame@icloud.com">
+                            Support Email
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
-        </p>
-        </p>
     </div>
 </body>
 
