--- a/index.html
+++ b/index.html
@@ -28,50 +28,45 @@
         </div>
     </div>
 
-
-
     <div class="row">
         <div class="mainColumn">
-        <div class="information">
-            <img class="avatar" src="./assets/images/avatar.jpeg" alt="Avatar">
+            <div class="information">
+                <img class="avatar" src="./assets/images/avatar.jpeg" alt="Avatar">
 
-            <h2>
-                About Me
-            </h2>
+                <h2>
+                    About Me
+                </h2>
 
-            <div class="detailText">
-                I am a student at California State University, Sacramento, pursuing a Bachelor's degree in Computer
-                Science.
-                I am expecting to graduate in May 2020 and am looking to start a career as a Software Engineer in the
-                San
-                Francisco Bay Area.
-            </div>
+                <div class="detailText">
+                    I am a student at California State University, Sacramento, pursuing a Bachelor's degree in Computer Science.
+                    I am expecting to graduate in May 2020 and am looking to start a career as a Software Engineer in the San Francisco Bay Area.
+                </div>
 
-            <div class="buttonDrawer">
+                <div class="buttonDrawer">
 
-                <div class="pillButton">
-                    <a class="active" href="./assets/files/Resume.pdf" download="DuncanCrawbuck_Resume">
-                        Resume
-                    </a>
+                    <div class="pillButton">
+                        <a class="active" href="./assets/files/Resume.pdf" download="DuncanCrawbuck_Resume">
+                            Resume
+                        </a>
 
-                    <a class="active" href="www.linkedin.com/in/dcrawbuck">
-                        LinkedIn
-                    </a>
+                        <a class="active" href="https://www.linkedin.com/in/dcrawbuck">
+                            LinkedIn
+                        </a>
 
-                    <a class="active" href="https://github.com/dcrawbuck">
-                        GitHub
-                    </a>
+                        <a class="active" href="https://github.com/dcrawbuck">
+                            GitHub
+                        </a>
 
-                    <a class="active" href="https://www.hackerrank.com/dcrawbuck">
-                        HackerRank
-                    </a>
+                        <a class="active" href="https://www.hackerrank.com/dcrawbuck">
+                            HackerRank
+                        </a>
 
-                    <a class="active" href="https://leetcode.com/dcrawbuck/">
-                        LeetCode
-                    </a>
+                        <a class="active" href="https://leetcode.com/dcrawbuck/">
+                            LeetCode
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
     </div>
 
