--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 <div class="detailText">
                     I am a student at California State University, Sacramento, pursuing a Bachelor's degree in Computer Science.
-                    I am expecting to graduate in May 2020 and am looking to start a career as a Software Engineer in the San Francisco Bay Area.
+                    I am graduating in May 2020 and am looking to start a career as a Software Engineer in the San Francisco Bay Area.
                 </div>
 
                 <div class="buttonDrawer">
