Update Resume and link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="buttonDrawer">
 
                     <div class="pillButton">
-                        <a class="active" href="./assets/files/Resume.pdf" target="_blank" download="DuncanCrawbuck_Resume">
+                        <a class="active" href="./assets/files/Duncan-Crawbuck-Resume.pdf" target="_blank">
                             Resume
                         </a>
 
