Update About Me text (post graduation)

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 </h2>
 
                 <div class="detailText">
-                    I am a student at California State University, Sacramento, pursuing a Bachelor's degree in Computer Science.
-                    I will graduate in May 2020 and am looking to start a career as a Software Engineer in the San Francisco Bay Area.
+                    I am a recent graduate of California State University, Sacramento, receiving a Bachelor's degree in Computer Science.
+                    I am seeking a full-time Software Engineering position in the San Francisco Bay Area.
                 </div>
 
                 <div class="buttonDrawer">
