Add sections for Technical Skills and Relevant Course Work

--- a/index.html
+++ b/index.html
@@ -70,30 +70,52 @@
         </div>
     </div>
 
-    <!-- <div class="row">
+    <div class="row">
         <div class="column">
             <div class="information">
                 <h2>
-                    Skills
+                    Technical Skills
                 </h2>
 
                 <div class="detailText">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <dl>
+                        <dt><b>Languages</b></dt>
+                        <dd>Swift, C/C++, Java, Assembly (NASM and MASM), Javascript, HTML, CSS</dd>
+
+                        <dt><b>Frameworks</b></dt>
+                        <dd>UIKit, SwiftUI, React</dd>
+
+                        <dt><b>Database</b></dt>
+                        <dd>MySQL</dd>
+
+                        <dt><b>Software</b></dt>
+                        <dd>Xcode, Eclipse, Visual Studio, Vim</dd>
+
+                        <dt><b>Development Tools</b></dt>
+                        <dd>Git, Scrum</dd>
+                    </dl>
                 </div>
             </div>
         </div>
         <div class="column">
             <div class="information">
                 <h2>
-                    Interests
+                    Relevant Course Work
                 </h2>
 
-                <div class="detailText">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <div class="detailText"> 
+                    <ul>
+                        <li>Advanced Algorithm Design & Analysis</li>
+                        <li>Compiler Construction</li>
+                        <li>Database Management Systems</li>
+                        <li>Computing Theory & Programming Languages</li>
+                        <li>Operating System Principles</li>
+                        <li>Computer Networks and Internets</li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 </body>
 
 </html>
