Add new projects, details, and previews

--- a/projects/index.html
+++ b/projects/index.html
@@ -28,11 +28,64 @@
         </div>
     </div>
 
+    <!-- SENIOR PROJECT -->
     <div class="row">
         <div class="mainColumn">
             <div class="information">
+                <img class="preview" src="../assets/images/seniorproject_preview.png" alt="Sprinkler Visualization">
+
                 <h2>
-                    dcrawbuck.github.io
+                    Fire & Risk Alliance Sprinkler Database
+                </h2>
+
+                <div class="subtitleText">
+                    Senior Project at CSUS
+                </div>
+
+                <div class="detailText">
+                    A React web application to compare spray patterns from a MongoDB database of sprinkler data, with
+                    database navigation and user login/authentication.
+                    I personally oversaw the implementation of an interactive d3.js visualization in the React
+                    application. <br>
+                    Developed as a year-long Scrum-based team project to develop and deliver software following to
+                    client specification, and included biweekly end-of-sprint meetings with the client (Fire & Risk
+                    Alliance) and a faculty advisor.
+                </div>
+
+                <div class="sharedDrawer">
+                    <div class="buttonDrawer">
+                        <div class="pillButton">
+                            <a class="active" href="http://sprinklerdb.com">
+                                Website
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="labelDrawer">
+                        <div class="pillLabel">
+                            JavaScript
+                        </div>
+                        <div class="pillLabel">
+                            React
+                        </div>
+                        <div class="pillLabel">
+                            d3.js
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- WEBSITE -->
+    <div class="row">
+        <div class="mainColumn">
+            <div class="information">
+                <img class="preview" src="../assets/images/website_preview.png" alt="Website">
+
+                <h2>
+                    crawbuck.com
                 </h2>
 
                 <div class="detailText">
@@ -41,13 +94,63 @@
                     The website supports dark mode, and uses the native system font.
                 </div>
 
-                <div class="buttonDrawer">
-                    <div class="pillButton">
-                        <a class="active" href="https://github.com/dcrawbuck/dcrawbuck.github.io">
-                            GitHub Repo
-                        </a>
+                <div class="sharedDrawer">
+                    <div class="buttonDrawer">
+                        <div class="pillButton">
+                            <a class="active" href="https://github.com/dcrawbuck/dcrawbuck.github.io">
+                                GitHub Repo
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="labelDrawer">
+                        <div class="pillLabel">
+                            HTML
+                        </div>
+                        <div class="pillLabel">
+                            CSS
+                        </div>
                     </div>
                 </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- CSC 131 GROUP PROJECT -->
+    <div class="row">
+        <div class="mainColumn">
+            <div class="information">
+                <h2>
+                    Pirex &ndash; Information Retrieval Tool
+                </h2>
+
+                <div class="subtitleText">
+                    Group project for CSC 131 (Computer Software Engineering) at CSUS
+                </div>
+
+                <div class="detailText">
+                    A Java-based document indexer and search application with a graphical user interface developed
+                    according to a provided specification.
+                    Followed the Scrum process and utilized shared version control.
+                </div>
+
+                <div class="sharedDrawer">
+                    <div class="buttonDrawer">
+                        <div class="pillButton">
+                            <a class="active" href="https://github.com/Talal916/Pirex">
+                                GitHub Repo
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="labelDrawer">
+                        <div class="pillLabel">
+                            Java
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
