Move Education information to own section

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
                 </h2>
 
                 <div class="detailText">
-                    I am a recent graduate of California State University, Sacramento, receiving a Bachelor's degree in Computer Science.
-                    I am seeking a full-time Software Engineering position in the San Francisco Bay Area.
+                    I am a recent graduate seeking a full-time Software Engineering position in the San Francisco Bay Area.
                 </div>
 
                 <div class="buttonDrawer">
@@ -100,10 +99,17 @@
         <div class="column">
             <div class="information">
                 <h2>
-                    Relevant Course Work
+                    Education
                 </h2>
 
-                <div class="detailText"> 
+                <div class="detailText">
+                    <dl>
+                        <dt>Bachelor of Science, Computer Science</dt>
+                        <dd>California State University, Sacramento</dd>
+                        <dd>Dean's Honor List, 3.5 GPA</dd>
+                    </dl>
+                    <br>
+                    <b>Relevant Coursework</b>
                     <ul>
                         <li>Advanced Algorithm Design & Analysis</li>
                         <li>Compiler Construction</li>
