Update icon and description

--- a/apps/index.html
+++ b/apps/index.html
@@ -31,14 +31,14 @@
     <div class="row">
         <div class="mainColumn">
             <div class="information">
-                <img class="icon" src="../assets/images/App Icons/Solitaire-Icon.png" alt="Avatar">
+                <img class="icon" src="../assets/images/App Icons/Simple & Classic Games.png" alt="Avatar">
 
                 <h2>
                     Simple & Classic Games
                 </h2>
 
                 <div class="detailText">
-                    A collection of classic games like Solitaire and Minesweeper, made spefically for iOS and macOS.
+                    A collection of classic games <!--including Solitaire and Minesweeper,--> made specifically for iOS and macOS.
                     Simple design with powerful features like Pro Mode for more customization and control.
                     Developed for iOS using Swift, UIKit, and SwiftUI, and for macOS using Mac Catalyst.
                 </div>
