--- a/apps/index.html
+++ b/apps/index.html
@@ -44,7 +44,8 @@
                 </div>
 
                 <div class="buttonDrawer">
-                    <a href="https://itunes.apple.com/us/app-bundle/id1478291357">
+                        <!-- <a href="https://itunes.apple.com/us/app-bundle/id1478291357"> -->
+                        <a href="https://itunes.apple.com/us/app-bundle/id1488275434">
                         <img class="badge"
                             src="../assets/images/Download on/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg">
                     </a>
