--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                             Resume
                         </a>
 
+                        <a class="active" href="mailto:duncan@crawbuck.com" title="duncan@crawbuck.com">
+                            Email
+                        </a>
+
                         <a class="active" href="https://www.linkedin.com/in/dcrawbuck">
                             LinkedIn
                         </a>
