Add iOS & Mac Apps, update descriptions and previews

--- a/projects/index.html
+++ b/projects/index.html
@@ -46,10 +46,9 @@
                     A React web application to compare spray patterns from a MongoDB database of sprinkler data, with
                     database navigation and user login/authentication.
                     I personally oversaw the implementation of an interactive d3.js visualization in the React
-                    application. <br>
-                    Developed as a year-long Scrum-based team project to develop and deliver software following to
-                    client specification, and included biweekly end-of-sprint meetings with the client (Fire & Risk
-                    Alliance) and a faculty advisor.
+                    application. 
+                    Developed as a year-long Scrum-based team project to develop and deliver software following client specification, and included biweekly end-of-sprint meetings with the client and a faculty advisor.
+                    <i>Website is now owned and operated by Fire & Risk Alliance.</i>
                 </div>
 
                 <div class="sharedDrawer">
@@ -71,6 +70,9 @@
                         <div class="pillLabel">
                             d3.js
                         </div>
+                        <div class="pillLabel">
+                            Scrum
+                        </div>
                     </div>
                 </div>
 
@@ -78,37 +80,42 @@
         </div>
     </div>
 
-    <!-- WEBSITE -->
+    <!-- iOS & MAC APPS -->
     <div class="row">
         <div class="mainColumn">
             <div class="information">
-                <img class="preview" src="../assets/images/website_preview.png" alt="Website">
+                <img class="icon" src="../assets/images/App Icons/iOS & Mac Apps.png" alt="iOS & Mac App Icons">
 
                 <h2>
-                    crawbuck.com
+                    iOS & Mac Apps
                 </h2>
 
                 <div class="detailText">
-                    A straightforward website designed to showcase my projects and developer talent.
-                    Built with simple HTML and CSS and powered by GitHub pages.
-                    The website supports dark mode, and uses the native system font.
+                    Developed games including Solitaire and Minesweeper and sold them on the iOS and Mac App Store.
+                    Independently learned Swift, UIKit, and SwiftUI in the process.
                 </div>
 
                 <div class="sharedDrawer">
                     <div class="buttonDrawer">
                         <div class="pillButton">
-                            <a class="active" href="https://github.com/dcrawbuck/dcrawbuck.github.io">
-                                GitHub Repo
+                            <a class="active" href="../apps/index.html">
+                                More Details
                             </a>
                         </div>
                     </div>
 
                     <div class="labelDrawer">
                         <div class="pillLabel">
-                            HTML
+                            Swift
                         </div>
                         <div class="pillLabel">
-                            CSS
+                            UIKit
+                        </div>
+                        <div class="pillLabel">
+                            SwiftUI
+                        </div>
+                        <div class="pillLabel">
+                            Mac Catalyst
                         </div>
                     </div>
                 </div>
@@ -147,6 +154,48 @@
                     <div class="labelDrawer">
                         <div class="pillLabel">
                             Java
+                        </div>
+                        <div class="pillLabel">
+                            Scrum
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- WEBSITE -->
+    <div class="row">
+        <div class="mainColumn">
+            <div class="information">
+                <img class="preview" src="../assets/images/website_preview.png" alt="Website Preview">
+
+                <h2>
+                    crawbuck.com
+                </h2>
+
+                <div class="detailText">
+                    A straightforward website designed to showcase my projects and developer talent.
+                    Built with simple HTML and CSS and powered by GitHub pages.
+                    The website supports dark mode, and uses the native system font.
+                </div>
+
+                <div class="sharedDrawer">
+                    <div class="buttonDrawer">
+                        <div class="pillButton">
+                            <a class="active" href="https://github.com/dcrawbuck/dcrawbuck.github.io">
+                                GitHub Repo
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="labelDrawer">
+                        <div class="pillLabel">
+                            HTML
+                        </div>
+                        <div class="pillLabel">
+                            CSS
                         </div>
                     </div>
                 </div>
