Add assembly project

--- a/projects/index.html
+++ b/projects/index.html
@@ -165,6 +165,42 @@
         </div>
     </div>
 
+    <!-- ASSEMBLY PROJECT -->
+    <div class="row">
+        <div class="mainColumn">
+            <div class="information">
+                <h2>
+                    File-Encrypt-Decrypt
+                </h2>
+
+                <div class="subtitleText">
+                    Project for CS 21 (Computer Organization and Assembly Language Programming) at Las Positas College
+                </div> 
+
+                <div class="detailText">
+                    A Linux command line program to save data into an encrypted file with the ability to read it back and decrypt it.
+                    Split into two executable files: one to encrypt and save data to file, and one to read from a file and decrypt.
+                </div>
+
+                <div class="sharedDrawer">
+                    <div class="buttonDrawer">
+                        <div class="pillButton">
+                            <a class="active" href="https://github.com/dcrawbuck/File-Encrypt-Decrypt">
+                                GitHub Repo
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="labelDrawer">
+                        <div class="pillLabel">
+                        Assembly
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
     <!-- WEBSITE -->
     <div class="row">
         <div class="mainColumn">
