Add compiler project

--- a/projects/index.html
+++ b/projects/index.html
@@ -165,6 +165,50 @@
         </div>
     </div>
 
+    <!-- COMPILER PROJECT -->
+    <div class="row">
+        <div class="mainColumn">
+            <div class="information">
+                <h2>
+                    Baby C Compiler
+                </h2>
+
+                <div class="subtitleText">
+                    Project for CSC 151 (Compiler Construction) at CSUS
+                </div> 
+
+                <div class="detailText">
+                    Parses and generates ILOC code for "Baby" C (simplified C style code, with if/else and while loops).
+                    Generates an abstract syntax tree, fills symbol table for declared variables.
+                    Written in C and uses the Bison parser and flex scanner.
+                </div>
+
+                <div class="sharedDrawer">
+                    <div class="buttonDrawer">
+                        <div class="pillButton">
+                            <a class="active" href="https://github.com/dcrawbuck/Baby-C-Compiler">
+                                GitHub Repo
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="labelDrawer">
+                        <div class="pillLabel">
+                            C
+                        </div>
+                        <div class="pillLabel">
+                            Flex
+                        </div>
+                        <div class="pillLabel">
+                            Bison
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
     <!-- ASSEMBLY PROJECT -->
     <div class="row">
         <div class="mainColumn">
