--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Duncan Crawbuck: About</title>
     <!-- Stylesheets -->
     <link href="./assets/css/style.css" rel="stylesheet" type="text/css" media="all">
+    
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "b091682bae4d46f288678f5da3f3c4b6"}'></script>
+    <!-- End Cloudflare Web Analytics -->
 </head>
 
 <body>
