--- a/apps/simple-and-classic-games/support/index.html
+++ b/apps/simple-and-classic-games/support/index.html
@@ -5,6 +5,10 @@
     <title>Simple & Classic Games Support</title>
     <!-- Stylesheets -->
     <link href="../../../assets/css/style.css" rel="stylesheet" type="text/css" media="all">
+
+    <!-- Responsive Web Design -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
 </head>
 
 <body>
