--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Duncan Crawbuck: About</title>
     <!-- Stylesheets -->
     <link href="./assets/css/style.css" rel="stylesheet" type="text/css" media="all">
+
+    <!-- Responsive Web Design -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Cloudflare Web Analytics -->
     <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "b091682bae4d46f288678f5da3f3c4b6"}'></script>
