--- a/apps/index.html
+++ b/apps/index.html
@@ -39,6 +39,13 @@
 
                 <h2>
                     Simple & Classic Games
+                    <a href="./simple-and-classic-games/index.html">
+                        Simple & Classic Games
+                        
+                        <!-- Chevron Icon -->
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="5 -5 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
+                        <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg> -->
+                    </a>
                 </h2>
 
                 <div class="detailText">
